apps/staging/ocis/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ocis-ingress"
  namespace: ocis
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: global-issuer
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - ocis.glegal.local
      secretName: ocis-cert
  rules:
    - host: "ocis.glegal.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "proxy"
                port:
                  number: 9200
